--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
         <section id="contact">
             <h2>Контакты</h2>
-            <p>Email: @trubaboardshop.com</p>
-            <p>Телефон: +7 (922) 701-16-60</p>
+            <button> Email: @trubaboardshop.com</button>
+            <button>Телефон: +7 (922) 701-16-60</button>
         </section>
     </main>
 
